@@ -1,6 +1,6 @@
 /*
  *   File name:	qtreemaparea_recursion.cpp
- *   Summary:	Support classes for KDirStat
+ *   Summary:	
  *   License:	LGPL - See file COPYING.LIB for details.
  *   Author:	Alexander Rawass <alexannika@users.sourceforge.net>
  *
@@ -28,14 +28,10 @@
 #include <kdebug.h>
 #include <kapp.h>
 #include <klocale.h>
-//#include "kdirtree.h"
-//#include "kdirtreeview.h"
-//#include "kdirsaver.h"
 #include "qtreemap.h"
 #include <qmainwindow.h>
-//#include <bits/mathcalls.h>
 
-using namespace KDirStat;
+//using namespace KDirStat;
 
 
 void QTreeMapArea::drawTreeMap(Object *dutree){
@@ -83,7 +79,6 @@ void QTreeMapArea::drawTreeMap(Object *dutree){
 
   delete cushion;
 
-    printf("END OF RECURSION\n");
     painter->end();
 
     this->update();
@@ -189,18 +184,13 @@ void QTreeMapArea::drawDuTree(Object *dutree, int x0,int y0,int xd0, int yd0, bo
 	if((fx>=0 && fy>=0)){
 	  if(findmode==FIND_SELECTION){
 	    if(dutree==found_kfileinfo){
-#ifdef HAVE_SELECTION
-	      if(selected_list->containsRef((KDirInfo *)dutree)){
-		//		printf("setting selection\n");
+	      if(selected_list->containsRef((Object  **)dutree)){
+				printf("setting selection\n");
 		QColor foundcolor=options->select_color;
 		paintEntry(x0,y0,xd0,yd0,node_name,direction,level,foundcolor,options->paintmode,c);
 	      }
-#else
-	      if(FALSE){
-	      }
-#endif
 	      else{
-		//printf("clearing selection\n");
+		printf("clearing selection\n");
 		QColor foundcolor=getBaseColor(node_name);
 		paintEntry(x0,y0,xd0,yd0,node_name,direction,level,foundcolor,options->paintmode,c);
 	      }
@@ -241,16 +231,12 @@ void QTreeMapArea::drawDuTree(Object *dutree, int x0,int y0,int xd0, int yd0, bo
 	else{
 	  // really draw this entry
 	  pmode=options->paintmode;
-#ifdef HAVE_SELECTION
-	  if(selected_list->containsRef((KDirInfo *)dutree)){
-	    //		printf("setting selection\n");
+
+	  if(selected_list->containsRef((Object **)dutree)){
+	    		printf("setting selection2\n");
 		QColor fcolor=options->select_color;
 		paintEntry(x0,y0,xd0,yd0,node_name,direction,level,fcolor,options->paintmode,c);
 	  }
-#else
-	  if(FALSE){
-	  }
-#endif
 	  else{
 	  paintEntry(x0,y0,xd0,yd0,node_name,direction,level,basecolor,pmode,c);
 #if 0
